--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ SECRET_KEY_ONE=erhgvuehfeivbeivbefbwk
 SECRET_KEY_TWO=fjrebfwkjfbwjkvsfbvbbb
 NODE_ENV=development
 CLIENT_URL=http://localhost:5173
+DATABASE_URL=mongodb://localhost:27017/crudapp-backend
