--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/express": "^4.17.17",
     "@types/hpp": "^0.2.2",
     "@types/http-status-codes": "^1.2.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "eslint": "^8.34.0",
